<resources>
    <string name="app_name">MSA manager</string>
    <string name="app_title">מנהל משאבי הארגון מ.ש אלומיניום</string>

    <!-- Strings related to login -->
    <string name="prompt_email">שם משתמש</string>
    <string name="prompt_password">סיסמה</string>
    <string name="action_sign_in">התחבר או הרשם</string>
    <string name="action_sign_in_short">התחבר</string>
    <string name="error_invalid_email">שם המשתמש לא חוקי</string>
    <string name="error_invalid_password">הסיסמה קצרה מדי (6 תווים לפחות)</string>
    <string name="error_incorrect_password">שם משתמש או סיסמה שגויים</string>
    <string name="error_field_required">השדה הזה הוא שדה חובה</string>
    <string name="permission_rationale">גישה לאנשי קשר נדרשת כדי לבצע השלמה אוטומטית</string>


    <string name="login">התחבר</string>
    <string name="entry1">הזן ידנית</string>
    <string name="entry2">הזן אוטומטית</string>
    <string name="manage_users_db">נהל מסד נתוני משתמשים</string>
    <string name="delete_verify">סיסמה (ווידוא) </string>
    <string name="delete_title">מסך ניהול המשתמשים</string>
    <string name="login_title">מסך חיבור לאפליקציה</string>
    <string name="delete_send_changes">שלח שינוי סיסמה</string>
    <string name="delete_mismatch">הסיסמאות המוזנות לא תואמות!</string>
    <string name="delete_empty_pw">הסיסמה לא יכולה להיות ריקה!</string>
    <string name="delete_confirmed">הפעולה בוצעה בהצלחה</string>
    <string name="testing_uid">109876543210</string>
    <string name="testing_email">dummy@test.com</string>
    <string name="testing_username">dummy</string>
    <string name="testing_password">1234</string>
    <string name="gmail_suffix">\@gmail.com</string>
    <string name="hello_string">שלום באיזה פרויקט תרצה לעבוד?</string>
    <string name="project_options_1">קבלני משנה</string>
    <string name="project_options_2">דיווחי תקלות</string>
    <string name="project_options_3">לו\"ז</string>
    <string name="project_options_decide">בחירת הפעולה</string>
    <string name="project_options_title">בורר הפרויטקים</string>
    <string name="main_btn_choose">בחר בפרויקט</string>

    <string name="divohi_takalot_form">טופס</string>
    <string name="divohi_takalot_edit">עריכה</string>
    <string name="kablni_mishne_tavla_pshota">טבלה פשוטה</string>
    <string name="kablni_mishne_hodshiim">נתונים של החודשיים האחרונים</string>
    <string name="kablni_mishne_pirot">פירוט</string>
</resources>
